Closed Bug 1310399 Opened 9 years ago Closed 9 years ago

Fix -Wshadow warning in widget/nsBaseWidget.cpp

Categories

(Core :: Widget, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla52
Tracking Status
firefox52 --- fixed

People

(Reporter: cpeterson, Assigned: cpeterson)

References

Details

Attachments

(1 file)

widget/nsBaseWidget.cpp:1970:14 [-Wshadow] declaration shadows a local variable Jim: you wrote this base widget code for Windows touch injection bug 941774.
Comment on attachment 8801462 [details] [diff] [review] Wshadow_widget.patch Jim: you wrote this base widget code for Windows touch injection bug 941774.
Attachment #8801462 - Flags: review?(jmathies)
Attachment #8801462 - Flags: review?(jmathies) → review+
Pushed by cpeterson@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/e49dd361aa99 Fix -Wshadow warning in widget/nsBaseWidget.cpp. r=jimm
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: