Bug 1310399 - Fix -Wshadow warning in widget/nsBaseWidget.cpp. r=jimm

widget/nsBaseWidget.cpp:1970:14 [-Wshadow] declaration shadows a local variable